RESOLVED FIXED252363
Check for visual data before accessing to avoid crash.
https://bugs.webkit.org/show_bug.cgi?id=252363
Summary Check for visual data before accessing to avoid crash.
Megan Gardner
Reported 2023-02-15 16:45:37 PST
Check for visual data before accessing to avoid crash.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-02-15 16:45:52 PST
Megan Gardner
Comment 2 2023-02-15 16:47:55 PST
EWS
Comment 3 2023-02-15 18:28:12 PST
Committed 260343@main (b5fa2df93bda): <https://commits.webkit.org/260343@main> Reviewed commits have been landed. Closing PR #10181 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.