Check for visual data before accessing to avoid crash. https://bugs.webkit.org/show_bug.cgi?id=252363 rdar://105522607

Reviewed by Tim Horton.

* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _selectionClipRect]):

Canonical link: https://commits.webkit.org/260343@main